added all the alts for img on index page

--- a/index.html
+++ b/index.html
@@ -26,62 +26,62 @@
     </div>
     <nav class="navigation">
         <ul class="header">
-            <li class="icon_navbar"><a href="" class="icon_navbar"><img class="nav_icon_header" src="images/icons/Icon_Inventory_Furnishings.png" title="Home"></a></li>
+            <li class="icon_navbar"><a href="" class="icon_navbar"><img class="nav_icon_header" src="images/icons/Icon_Inventory_Furnishings.png" alt="Home icon" title="Home"></a></li>
             <div class="dropdown">
 
 
-            <li class="icon_navbar char_icon" onclick="showCharacters()"><a class="icon_navbar"><img class="nav_icon_header" src="images/icons/Icon_Inventory_Character_Development_Items.png" title="Characters"></a></li>
+            <li class="icon_navbar char_icon" onclick="showCharacters()"><a class="icon_navbar"><img class="nav_icon_header" src="images/icons/Icon_Inventory_Character_Development_Items.png" alt="Characters icon" title="Characters"></a></li>
                 <div class="characters">
-                    <a href="html/albedo.html" class="a_icon"><img src="images/characters/Albedo_head.png" title="Albedo"></a>
-                    <a href="html/aloy.html" class="a_icon"><img src="images/characters/Aloy_head.png" title="Aloy"></a>
-                    <a href="html/amber.html" class="a_icon"><img src="images/characters/Amber_head.png" title="Amber"></a>
-                    <a href="html/barbara.html" class="a_icon"><img src="images/characters/Barbara_head.png" title="Barbara"></a>
-                    <a href="html/beidou.html" class="a_icon"><img src="images/characters/Beidou_head.png" title="Beidou"></a>
-                    <a href="html/bennett.html" class="a_icon"><img src="images/characters/Bennett_head.png" title="Bennett"></a>
-                    <a href="html/chongyun.html" class="a_icon"><img src="images/characters/Chongyun_head.png" title="Chongyun"></a>
-                    <a href="html/diluc.html" class="a_icon"><img src="images/characters/Diluc_head.png" title="Diluc"></a>
-                    <a href="html/diona.html" class="a_icon"><img src="images/characters/Diona_head.png" title="Diona"></a>
-                    <a href="html/eula.html" class="a_icon"><img src="images/characters/Eula_head.png" title="Eula"></a>
-                    <a href="html/fischl.html" class="a_icon"><img src="images/characters/Fischl_head.png" title="Fischl"></a>
-                    <a href="html/ganyu.html" class="a_icon"><img src="images/characters/Ganyu_head.png" title="Ganyu"></a>
-                    <a href="html/gorou.html" class="a_icon"><img src="images/characters/Gorou_head.png" title="Gorou"></a>
-                    <a href="html/hutao.html" class="a_icon"><img src="images/characters/Hu%20Tao_head.png" title="Hu Tao"></a>
-                    <a href="html/itto.html" class="a_icon"><img src="images/characters/Itto_head.png" title="Itto"></a>
-                    <a href="html/jean.html" class="a_icon"><img src="images/characters/Jean_head.png" title="Jean"></a>
-                    <a href="html/kazuha.html" class="a_icon"><img src="images/characters/Kazuha_head.png" title="Kaedehara Kazuha"></a>
-                    <a href="html/kaeya.html" class="a_icon"><img src="images/characters/Kaeya_head.png" title="Kaeya"></a>
-                    <a href="html/ayaka.html" class="a_icon"><img src="images/characters/Ayaka_head.png" title="Kamisato Ayaka"></a>
-                    <a href="html/keqing.html" class="a_icon"><img src="images/characters/Keqing_head.png" title="Keqing"></a>
-                    <a href="html/klee.html" class="a_icon"><img src="images/characters/Klee_head.png" title="Klee"></a>
-                    <a href="html/sara.html" class="a_icon"><img src="images/characters/Sara_head.png" title="Kujou Sara"></a>
-                    <a href="html/lisa.html" class="a_icon"><img src="images/characters/Lisa_head.png" title="Lisa"></a>
-                    <a href="html/mona.html" class="a_icon"><img src="images/characters/Mona_head.png" title="Mona"></a>
-                    <a href="html/ningguang.html" class="a_icon"><img src="images/characters/Ningguang_head.png" title="Ningguang"></a>
-                    <a href="html/noelle.html" class="a_icon"><img src="images/characters/Noelle_head.png" title="Noelle"></a>
-                    <a href="html/qiqi.html" class="a_icon"><img src="images/characters/Qiqi_head.png" title="Qiqi"></a>
-                    <a href="html/raiden.html" class="a_icon"><img src="images/characters/Raiden_head.png" title="Raiden Shogun"></a>
-                    <a href="html/razor.html" class="a_icon"><img src="images/characters/Razor_head.png" title="Razor"></a>
-                    <a href="html/rosaria.html" class="a_icon"><img src="images/characters/Rosaria_head.png" title="Rosaria"></a>
-                    <a href="html/kokomi.html" class="a_icon"><img src="images/characters/Kokomi_head.png" title="Sangonomiya Kokomi"></a>
-                    <a href="html/sayu.html" class="a_icon"><img src="images/characters/Sayu_head.png" title="Sayu"></a>
-                    <a href="html/shenhe.html" class="a_icon"><img src="images/characters/Shenhe_head.png" title="Shenhe"></a>
-                    <a href="html/sucrose.html" class="a_icon"><img src="images/characters/Sucrose_head.png" title="Sucrose"></a>
-                    <a href="html/tartaglia.html" class="a_icon"><img src="images/characters/Tartaglia_head.png" title="Tartaglia"></a>
-                    <a href="html/thoma.html" class="a_icon"><img src="images/characters/Thoma_head.png" title="Thoma"></a>
-                    <a href="html/traveler.html" class="a_icon"><img src="images/characters/Traveler%20(Electro)_head.png" title="Traveler"></a>
+                    <a href="html/albedo.html" class="a_icon"><img src="images/characters/Albedo_head.png" alt="Albedo" title="Albedo"></a>
+                    <a href="html/aloy.html" class="a_icon"><img src="images/characters/Aloy_head.png" alt="Aloy" title="Aloy"></a>
+                    <a href="html/amber.html" class="a_icon"><img src="images/characters/Amber_head.png" alt="Amber" title="Amber"></a>
+                    <a href="html/barbara.html" class="a_icon"><img src="images/characters/Barbara_head.png" alt="Barbara" title="Barbara"></a>
+                    <a href="html/beidou.html" class="a_icon"><img src="images/characters/Beidou_head.png" alt="Beidou" title="Beidou"></a>
+                    <a href="html/bennett.html" class="a_icon"><img src="images/characters/Bennett_head.png" alt="Bennett" title="Bennett"></a>
+                    <a href="html/chongyun.html" class="a_icon"><img src="images/characters/Chongyun_head.png" alt="Chongyun" title="Chongyun"></a>
+                    <a href="html/diluc.html" class="a_icon"><img src="images/characters/Diluc_head.png" alt="Diluc" title="Diluc"></a>
+                    <a href="html/diona.html" class="a_icon"><img src="images/characters/Diona_head.png" alt="Diona" title="Diona"></a>
+                    <a href="html/eula.html" class="a_icon"><img src="images/characters/Eula_head.png" alt="Eula" title="Eula"></a>
+                    <a href="html/fischl.html" class="a_icon"><img src="images/characters/Fischl_head.png" alt="Fischl" title="Fischl"></a>
+                    <a href="html/ganyu.html" class="a_icon"><img src="images/characters/Ganyu_head.png" alt="Ganyu" title="Ganyu"></a>
+                    <a href="html/gorou.html" class="a_icon"><img src="images/characters/Gorou_head.png" alt="Gorou" title="Gorou"></a>
+                    <a href="html/hutao.html" class="a_icon"><img src="images/characters/Hu%20Tao_head.png" alt="Hu Tao" title="Hu Tao"></a>
+                    <a href="html/itto.html" class="a_icon"><img src="images/characters/Itto_head.png" alt="Itto" title="Itto"></a>
+                    <a href="html/jean.html" class="a_icon"><img src="images/characters/Jean_head.png" alt="Jean" title="Jean"></a>
+                    <a href="html/kazuha.html" class="a_icon"><img src="images/characters/Kazuha_head.png" alt="Kaedehara Kazuha" title="Kaedehara Kazuha"></a>
+                    <a href="html/kaeya.html" class="a_icon"><img src="images/characters/Kaeya_head.png" alt="Kaeya" title="Kaeya"></a>
+                    <a href="html/ayaka.html" class="a_icon"><img src="images/characters/Ayaka_head.png" alt="Kamisato Ayaka" title="Kamisato Ayaka"></a>
+                    <a href="html/keqing.html" class="a_icon"><img src="images/characters/Keqing_head.png" alt="Keqing" title="Keqing"></a>
+                    <a href="html/klee.html" class="a_icon"><img src="images/characters/Klee_head.png" alt="Klee" title="Klee"></a>
+                    <a href="html/sara.html" class="a_icon"><img src="images/characters/Sara_head.png" alt="Kujou Sara" title="Kujou Sara"></a>
+                    <a href="html/lisa.html" class="a_icon"><img src="images/characters/Lisa_head.png" alt="Lisa" title="Lisa"></a>
+                    <a href="html/mona.html" class="a_icon"><img src="images/characters/Mona_head.png" alt="Mona" title="Mona"></a>
+                    <a href="html/ningguang.html" class="a_icon"><img src="images/characters/Ningguang_head.png" alt="Ningguang" title="Ningguang"></a>
+                    <a href="html/noelle.html" class="a_icon"><img src="images/characters/Noelle_head.png" alt="Noelle" title="Noelle"></a>
+                    <a href="html/qiqi.html" class="a_icon"><img src="images/characters/Qiqi_head.png" alt="Qiqi" title="Qiqi"></a>
+                    <a href="html/raiden.html" class="a_icon"><img src="images/characters/Raiden_head.png" alt="Raiden Shogun" title="Raiden Shogun"></a>
+                    <a href="html/razor.html" class="a_icon"><img src="images/characters/Razor_head.png" alt="Razor" title="Razor"></a>
+                    <a href="html/rosaria.html" class="a_icon"><img src="images/characters/Rosaria_head.png" alt="Rosaria" title="Rosaria"></a>
+                    <a href="html/kokomi.html" class="a_icon"><img src="images/characters/Kokomi_head.png" alt="Sangonomiya kokomi" title="Sangonomiya Kokomi"></a>
+                    <a href="html/sayu.html" class="a_icon"><img src="images/characters/Sayu_head.png" alt="Sayu" title="Sayu"></a>
+                    <a href="html/shenhe.html" class="a_icon"><img src="images/characters/Shenhe_head.png" alt="Shenhe" title="Shenhe"></a>
+                    <a href="html/sucrose.html" class="a_icon"><img src="images/characters/Sucrose_head.png" alt="Sucrose" title="Sucrose"></a>
+                    <a href="html/tartaglia.html" class="a_icon"><img src="images/characters/Tartaglia_head.png" alt="Tartaglia" title="Tartaglia"></a>
+                    <a href="html/thoma.html" class="a_icon"><img src="images/characters/Thoma_head.png" alt="Thoma" title="Thoma"></a>
+                    <a href="html/traveler.html" class="a_icon"><img src="images/characters/Traveler%20(Electro)_head.png" alt="Traveler" title="Traveler"></a>
     <!--                add element variation for traveler when click ("which element ? -electro/geo/anemo = new html)-->
-                    <a href="html/venti.html" class="a_icon"><img src="images/characters/Venti_head.png" title="Venti"></a>
-                    <a href="html/xiangling.html" class="a_icon"><img src="images/characters/Xiangling_head.png" title="Xiangling"></a>
-                    <a href="html/xiao.html" class="a_icon"><img src="images/characters/Xiao_head.png" title="Xiao"></a>
-                    <a href="html/xingqiu.html" class="a_icon"><img src="images/characters/Xingqiu_head.png" title="Xingqiu"></a>
-                    <a href="html/xinyan.html" class="a_icon"><img src="images/characters/Xinyan_head.png" title="Xinyan"></a>
-                    <a href="html/yanfei.html" class="a_icon"><img src="images/characters/Yanfei_head.png" title="Yanfei"></a>
-                    <a href="html/yoimiya.html" class="a_icon"><img src="images/characters/Yoimiya_head.png" title="Yoimiya"></a>
-                    <a href="html/yunjin.html" class="a_icon"><img src="images/characters/Yun_jin_head.png" title="Yun Jin"></a>
-                    <a href="html/zhongli.html" class="a_icon"><img src="images/characters/Zhongli_head.png" title="Zhongli"></a>
+                    <a href="html/venti.html" class="a_icon"><img src="images/characters/Venti_head.png" alt="Venti" title="Venti"></a>
+                    <a href="html/xiangling.html" class="a_icon"><img src="images/characters/Xiangling_head.png" alt="Xiangling" title="Xiangling"></a>
+                    <a href="html/xiao.html" class="a_icon"><img src="images/characters/Xiao_head.png" alt="Xiao" title="Xiao"></a>
+                    <a href="html/xingqiu.html" class="a_icon"><img src="images/characters/Xingqiu_head.png" alt="Xingqiu" title="Xingqiu"></a>
+                    <a href="html/xinyan.html" class="a_icon"><img src="images/characters/Xinyan_head.png" alt="Xinyan" title="Xinyan"></a>
+                    <a href="html/yanfei.html" class="a_icon"><img src="images/characters/Yanfei_head.png" alt="Yanfei" title="Yanfei"></a>
+                    <a href="html/yoimiya.html" class="a_icon"><img src="images/characters/Yoimiya_head.png" alt="Yoimiya" title="Yoimiya"></a>
+                    <a href="html/yunjin.html" class="a_icon"><img src="images/characters/Yun_jin_head.png" alt="Yun Jin" title="Yun Jin"></a>
+                    <a href="html/zhongli.html" class="a_icon"><img src="images/characters/Zhongli_head.png"  alt="Zhongli" title="Zhongli"></a>
                 </div>
             </div>
-            <li class="icon_navbar"><a href="https://webstatic-sea.mihoyo.com/app/ys-map-sea/index.html?utm_source=hoyolab&lang=en-us#/map/2" class="icon_navbar" target="_blank"><img class="nav_icon_header" src="images/icons/Icon_Inventory_Quest.png" title="Map"></a></li>
+            <li class="icon_navbar"><a href="https://webstatic-sea.mihoyo.com/app/ys-map-sea/index.html?utm_source=hoyolab&lang=en-us#/map/2" class="icon_navbar" target="_blank"><img class="nav_icon_header" src="images/icons/Icon_Inventory_Quest.png" alt="Genshin map" title="Map"></a></li>
         </ul>
     </nav>
 <script src="script/main.js"></script>
