footer underline with fade

--- a/html/albedo.html
+++ b/html/albedo.html
@@ -528,6 +528,7 @@
     <div class="section fp-auto-height" id="section3">
         <footer>
             <div class="top">
+
                 <a href="https://discord.gg/sDv2BfsA7W" target="_blank"><img src="../images/icons/discord.png"
                                                                              title="Community server"
                                                                              alt="Community server"></a>
@@ -535,6 +536,8 @@
                         src="../images/icons/youtube.png" title="Youtube channel" alt="Youtube channel"></a>
                 <a href="https://www.hoyolab.com/home" target="_blank"><img src="../images/icons/hoyolab.png"
                                                                             title="Hoyolab" alt="Hoyolab"></a>
+                <div class="underline_footer">
+                </div>
             </div>
             <div class="bot">
                 <div class="logos">
