--- a/html/albedo.html
+++ b/html/albedo.html
@@ -512,7 +512,13 @@
             <script src="../script/charaNavBar.js"></script>
         </div>
 
-        <div class="name"><span>Albedo</span></div>
+        <div class="name">
+            <div class="element">
+                <img src="../images/img-genshin/elements/geo.png">
+                <span>Albedo</span>
+            </div>
+        </div>
+
     </div>
     <div class="section" id="section2">
         <div class="video">
