changed index html/css + added news page

--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <title>Build me Paimon</title>
 
     <link rel="stylesheet" href="style/main.css">
+    <link rel="stylesheet" href="style/menu.css">
+    <link rel="stylesheet" href="style/footer.css">
     <link rel="icon" href="images/icons/Character_Paimon_Portrait.png">
     <script src="script/main.js"></script>
 </head>
@@ -27,8 +29,8 @@
     <nav class="navigation">
         <ul class="header">
             <li class="icon_navbar"><a href="" class="icon_navbar"><img class="nav_icon_header" src="images/icons/Icon_Inventory_Furnishings.png" alt="Home icon" title="Home"></a></li>
+            <li class="icon_navbar"><a href="html/news.html" class="icon_navbar"><img class="nav_icon_header" src="images/icons/Icon_Inventory_Quest.png" alt="News icon" title="News"></a></li>
             <div class="dropdown">
-
 
             <li class="icon_navbar char_icon" onclick="showCharacters()"><a class="icon_navbar"><img class="nav_icon_header" src="images/icons/Icon_Inventory_Character_Development_Items.png" alt="Characters icon" title="Characters"></a></li>
                 <div class="characters">
@@ -81,9 +83,64 @@
                     <a href="html/zhongli.html" class="a_icon"><img src="images/characters/Zhongli_head.png"  alt="Zhongli" title="Zhongli"></a>
                 </div>
             </div>
-            <li class="icon_navbar"><a href="https://webstatic-sea.mihoyo.com/app/ys-map-sea/index.html?utm_source=hoyolab&lang=en-us#/map/2" class="icon_navbar" target="_blank"><img class="nav_icon_header" src="images/icons/Icon_Inventory_Quest.png" alt="Genshin map" title="Map"></a></li>
+            <li class="icon_navbar"><a href="https://webstatic-sea.mihoyo.com/app/ys-map-sea/index.html?utm_source=hoyolab&lang=en-us#/map/2" class="icon_navbar" target="_blank"><img class="nav_icon_header" src="images/icons/Icon_Inventory_Precious_Items.png" alt="Genshin map" title="Map"></a></li>
         </ul>
     </nav>
+
+
+    <div class="list_articles">
+        <div>
+            <div class="articles">
+            </div>
+            <div class="articles">
+            </div>
+            <div class="articles">
+            </div>
+        </div>
+    </div>
+
+
+    <div class="list_new_characters">
+        <img src="images/wallpaper/banner.png">
+        <div>
+
+        </div>
+    </div>
+
+
+<!--    <footer>-->
+<!--        <div class="top">-->
+<!--            <a href="https://discord.gg/sDv2BfsA7W" target="_blank"><img src="../images/icons/discord.png"-->
+<!--                                                                         title="Community server"-->
+<!--                                                                         alt="Community server"></a>-->
+<!--            <a href="https://www.youtube.com/channel/UCiS882YPwZt1NfaM0gR0D9Q" target="_blank"><img-->
+<!--                    src="../images/icons/youtube.png" title="Youtube channel" alt="Youtube channel"></a>-->
+<!--            <a href="https://www.hoyolab.com/home" target="_blank"><img src="../images/icons/hoyolab.png"-->
+<!--                                                                        title="Hoyolab" alt="Hoyolab"></a>-->
+<!--            <div class="underline_footer">-->
+<!--            </div>-->
+<!--        </div>-->
+<!--        <div class="bot">-->
+<!--            <div class="logos">-->
+<!--                <a href="../index.html" target="_blank"><img src="../images/icons/Character_Paimon_Portrait.png"-->
+<!--                                                             title="BuildMePaimon" alt="BuildMePaimon"></a>-->
+<!--                <a href="https://genshin.mihoyo.com/en/home" target="_blank"><img-->
+<!--                        src="../images/img-genshin/genshin_logo.png" title="Genshin Website" alt="Genshin Website"></a>-->
+<!--            </div>-->
+<!--            <div class="links">-->
+<!--                <div>-->
+<!--                    <a href="https://github.com/antaww" target="_blank" class="github_links">GitHub antaww</a>-->
+<!--                    <a href="https://github.com/xhmyjae" target="_blank" class="github_links">GitHub xhmyjae</a>-->
+<!--                    <a href="mailto: antoine.pizzetta@ynov.com" class="github_links">Contact Us</a>-->
+<!--                </div>-->
+<!--                <p><b>Build Me Paimon</b> is a site created by fans to help players build their Genshin's-->
+<!--                    characters.-->
+<!--                    It is not affiliated with miHoYo.</p>-->
+<!--            </div>-->
+<!--        </div>-->
+<!--    </footer>-->
+
+
 <script src="script/main.js"></script>
 </body>
 </html>
