made the base articles on index page

--- a/index.html
+++ b/index.html
@@ -91,10 +91,35 @@
     <div class="list_articles">
         <div>
             <div class="articles">
+                <div>
+                    <div>
+                        <img src="images/wallpaper/global_background.png" class="new_articles_img">
+                    </div>
+                    <div class="new_articles_content">
+                        <h2>Future title</h2>
+                        <span>Bla bla slbclznlz lzb ccsccjze , lzfnzl cl zlznclz l,c zlssdcpsp...</span>
+                    </div>
+                </div>
             </div>
             <div class="articles">
+                <div>
+                    <div>
+                        <img src="images/wallpaper/global_background.png" class="new_articles_img">
+                    </div>                    <div class="new_articles_content">
+                        <h2>Future title</h2>
+                        <span>Bla bla slkzno lz l,c zlssdcpsp...</span>
+                    </div>
+                </div>
             </div>
             <div class="articles">
+                <div>
+                    <div>
+                        <img src="images/wallpaper/global_background.png" class="new_articles_img">
+                    </div>                    <div class="new_articles_content">
+                        <h2>Future titleq, clk cjl cjlz f</h2>
+                        <span>Bla bla slbclzlsdvksvls vk vkjz vkz hbzu ojzfozfkzfb zifbznclz l,c zlssdcpsp...</span>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
