big update: changed the news html/css (scroll not working)

--- a/html/albedo.html
+++ b/html/albedo.html
@@ -28,6 +28,8 @@
                                                                                      src="../images/icons/Icon_Inventory_Furnishings.png"
                                                                                      alt="Home"
                                                                                      title="Home"></a></li>
+            <li class="icon_navbar"><a href="../html/news.html" class="icon_navbar"><img class="nav_icon_header" src="../images/icons/Icon_Inventory_Quest.png" alt="News icon" title="News"></a></li>
+
             <div class="dropdown">
                 <li class="icon_navbar char_icon" onclick="showCharacters()"><a class="icon_navbar"><img
                         class="nav_icon_header" src="../images/icons/Icon_Inventory_Character_Development_Items.png"
@@ -167,11 +169,7 @@
                                                                        title="Zhongli"></a>
                 </div>
             </div>
-            <li class="icon_navbar"><a
-                    href="https://webstatic-sea.mihoyo.com/app/ys-map-sea/index.html?utm_source=hoyolab&lang=en-us#/map/2"
-                    class="icon_navbar" target="_blank"><img class="nav_icon_header"
-                                                             src="../images/icons/Icon_Inventory_Quest.png" alt="Genshin Map" title="Map"></a>
-            </li>
+            <li class="icon_navbar"><a href="https://webstatic-sea.mihoyo.com/app/ys-map-sea/index.html?utm_source=hoyolab&lang=en-us#/map/2" class="icon_navbar" target="_blank"><img class="nav_icon_header" src="../images/icons/Icon_Inventory_Precious_Items.png" alt="Genshin map" title="Map"></a></li>
         </ul>
     </nav>
 
