added the a tag on articles

--- a/html/news.html
+++ b/html/news.html
@@ -178,62 +178,124 @@
     <div class="all_articles">
 
         <div class="single_articles">
-            <img src="../images/wallpaper/global_background.png">
+            <a href="">
+                <img src="../images/wallpaper/global_background.png" alt="Article image">
 
-            <div class="articles_content">
-                <h2>sjvbnwsobvwonvpwikn fpiwh </h2>
-                <p>nviwevhiwphfgiwo oeihfgwoifh wpiwhefi qfpiewhf whefipwe hfpihfipwh efiqhepif hwepifh wepif hweoiufhweipfh qw ofjw9eg hewjdnf ih wejn oid  nvjken ijn iowehf mn cxj;kfh qpo pmsowaih</p>
-            </div>
+                <div class="articles_content">
+                    <h2>sjvbnwsobvwonvpwikn fpiwh </h2>
+                    <p>nviwevhiwphfgiwo oeihfgwoifh wpiwhefi qfpiewhf whefipwe hfpihfipwh efiqhepif hwepifh wepif hweoiufhweipfh qw ofjw9eg hewjdnf ih wejn oid  nvjken ijn iowehf mn cxj;kfh qpo pmsowaih</p>
+                </div>
+            </a>
         </div>
 
         <div class="single_articles">
-            <div class="articles_img"></div>
-            <div class="articles_content"></div>
+            <a href="">
+                <img src="../images/wallpaper/global_background.png" alt="Article image">
+
+                <div class="articles_content">
+                    <h2>sjvbnwsobvwonvpwikn fpiwh </h2>
+                    <p>nviwevhiwphfgiwo oeihfgwoifh wpiwhefi qfpiewhf whefipwe hfpihfipwh efiqhepif hwepifh wepif hweoiufhweipfh qw ofjw9eg hewjdnf ih wejn oid  nvjken ijn iowehf mn cxj;kfh qpo pmsowaih</p>
+                </div>
+            </a>
         </div>
 
         <div class="single_articles">
-            <div class="articles_img"></div>
-            <div class="articles_content"></div>
+            <a href="">
+                <img src="../images/wallpaper/global_background.png" alt="Article image">
+
+                <div class="articles_content">
+                    <h2>sjvbnwsobvwonvpwikn fpiwh </h2>
+                    <p>nviwevhiwphfgiwo oeihfgwoifh wpiwhefi qfpiewhf whefipwe hfpihfipwh efiqhepif hwepifh wepif hweoiufhweipfh qw ofjw9eg hewjdnf ih wejn oid  nvjken ijn iowehf mn cxj;kfh qpo pmsowaih</p>
+                </div>
+            </a>
         </div>
 
         <div class="single_articles">
-            <div class="articles_img"></div>
-            <div class="articles_content"></div>
+            <a href="">
+                <img src="../images/wallpaper/global_background.png" alt="Article image">
+
+                <div class="articles_content">
+                    <h2>sjvbnwsobvwonvpwikn fpiwh </h2>
+                    <p>nviwevhiwphfgiwo oeihfgwoifh wpiwhefi qfpiewhf whefipwe hfpihfipwh efiqhepif hwepifh wepif hweoiufhweipfh qw ofjw9eg hewjdnf ih wejn oid  nvjken ijn iowehf mn cxj;kfh qpo pmsowaih</p>
+                </div>
+            </a>
         </div>
 
         <div class="single_articles">
-            <div class="articles_img"></div>
-            <div class="articles_content"></div>
+            <a href="">
+                <img src="../images/wallpaper/global_background.png" alt="Article image">
+
+                <div class="articles_content">
+                    <h2>sjvbnwsobvwonvpwikn fpiwh </h2>
+                    <p>nviwevhiwphfgiwo oeihfgwoifh wpiwhefi qfpiewhf whefipwe hfpihfipwh efiqhepif hwepifh wepif hweoiufhweipfh qw ofjw9eg hewjdnf ih wejn oid  nvjken ijn iowehf mn cxj;kfh qpo pmsowaih</p>
+                </div>
+            </a>
         </div>
 
         <div class="single_articles">
-            <div class="articles_img"></div>
-            <div class="articles_content"></div>
+            <a href="">
+                <img src="../images/wallpaper/global_background.png" alt="Article image">
+
+                <div class="articles_content">
+                    <h2>sjvbnwsobvwonvpwikn fpiwh </h2>
+                    <p>nviwevhiwphfgiwo oeihfgwoifh wpiwhefi qfpiewhf whefipwe hfpihfipwh efiqhepif hwepifh wepif hweoiufhweipfh qw ofjw9eg hewjdnf ih wejn oid  nvjken ijn iowehf mn cxj;kfh qpo pmsowaih</p>
+                </div>
+            </a>
         </div>
 
         <div class="single_articles">
-            <div class="articles_img"></div>
-            <div class="articles_content"></div>
+            <a href="">
+                <img src="../images/wallpaper/global_background.png" alt="Article image">
+
+                <div class="articles_content">
+                    <h2>sjvbnwsobvwonvpwikn fpiwh </h2>
+                    <p>nviwevhiwphfgiwo oeihfgwoifh wpiwhefi qfpiewhf whefipwe hfpihfipwh efiqhepif hwepifh wepif hweoiufhweipfh qw ofjw9eg hewjdnf ih wejn oid  nvjken ijn iowehf mn cxj;kfh qpo pmsowaih</p>
+                </div>
+            </a>
         </div>
 
         <div class="single_articles">
-            <div class="articles_img"></div>
-            <div class="articles_content"></div>
+            <a href="">
+                <img src="../images/wallpaper/global_background.png" alt="Article image">
+
+                <div class="articles_content">
+                    <h2>sjvbnwsobvwonvpwikn fpiwh </h2>
+                    <p>nviwevhiwphfgiwo oeihfgwoifh wpiwhefi qfpiewhf whefipwe hfpihfipwh efiqhepif hwepifh wepif hweoiufhweipfh qw ofjw9eg hewjdnf ih wejn oid  nvjken ijn iowehf mn cxj;kfh qpo pmsowaih</p>
+                </div>
+            </a>
         </div>
 
         <div class="single_articles">
-            <div class="articles_img"></div>
-            <div class="articles_content"></div>
+            <a href="">
+                <img src="../images/wallpaper/global_background.png" alt="Article image">
+
+                <div class="articles_content">
+                    <h2>sjvbnwsobvwonvpwikn fpiwh </h2>
+                    <p>nviwevhiwphfgiwo oeihfgwoifh wpiwhefi qfpiewhf whefipwe hfpihfipwh efiqhepif hwepifh wepif hweoiufhweipfh qw ofjw9eg hewjdnf ih wejn oid  nvjken ijn iowehf mn cxj;kfh qpo pmsowaih</p>
+                </div>
+            </a>
         </div>
 
         <div class="single_articles">
-            <div class="articles_img"></div>
-            <div class="articles_content"></div>
+            <a href="">
+                <img src="../images/wallpaper/global_background.png" alt="Article image">
+
+                <div class="articles_content">
+                    <h2>sjvbnwsobvwonvpwikn fpiwh </h2>
+                    <p>nviwevhiwphfgiwo oeihfgwoifh wpiwhefi qfpiewhf whefipwe hfpihfipwh efiqhepif hwepifh wepif hweoiufhweipfh qw ofjw9eg hewjdnf ih wejn oid  nvjken ijn iowehf mn cxj;kfh qpo pmsowaih</p>
+                </div>
+            </a>
         </div>
 
         <div class="single_articles">
-            <div class="articles_img"></div>
-            <div class="articles_content"></div>
+            <a href="">
+                <img src="../images/wallpaper/global_background.png" alt="Article image">
+
+                <div class="articles_content">
+                    <h2>sjvbnwsobvwonvpwikn fpiwh </h2>
+                    <p>nviwevhiwphfgiwo oeihfgwoifh wpiwhefi qfpiewhf whefipwe hfpihfipwh efiqhepif hwepifh wepif hweoiufhweipfh qw ofjw9eg hewjdnf ih wejn oid  nvjken ijn iowehf mn cxj;kfh qpo pmsowaih</p>
+                </div>
+            </a>
         </div>
 
     </div>
