changed div to a in index.html

--- a/index.html
+++ b/index.html
@@ -91,35 +91,35 @@
     <div class="list_articles">
         <div>
             <div class="articles">
-                <div>
+                <a>
                     <div>
-                        <img src="images/wallpaper/global_background.png" class="new_articles_img">
+                        <img src="images/wallpaper/global_background.png" class="new_articles_img" alt="Article image">
                     </div>
                     <div class="new_articles_content">
                         <h2>Future title</h2>
                         <span>Bla bla slbclznlz lzb ccsccjze , lzfnzl cl zlznclz l,c zlssdcpsp...</span>
                     </div>
-                </div>
+                </a>
             </div>
             <div class="articles">
-                <div>
+                <a>
                     <div>
-                        <img src="images/wallpaper/global_background.png" class="new_articles_img">
+                        <img src="images/wallpaper/global_background.png" class="new_articles_img" alt="Article image">
                     </div>                    <div class="new_articles_content">
                         <h2>Future title</h2>
                         <span>Bla bla slkzno lz l,c zlssdcpsp...</span>
                     </div>
-                </div>
+                </a>
             </div>
             <div class="articles">
-                <div>
+                <a>
                     <div>
-                        <img src="images/wallpaper/global_background.png" class="new_articles_img">
+                        <img src="images/wallpaper/global_background.png" class="new_articles_img" alt="Article image">
                     </div>                    <div class="new_articles_content">
-                        <h2>Future titleq, clk cjl cjlz f</h2>
-                        <span>Bla bla slbclzlsdvksvls vk vkjz vkz hbzu ojzfozfkzfb zifbznclz l,c zlssdcpsp...</span>
-                    </div>
+                    <h2>Future titleq, clk cjl cjlz f</h2>
+                    <span>Bla bla slbclzlsdvksvls vk vkjz vkz hbzu ojzfozfkzfb zifbznclz l,c zlssdcpsp...</span>
                 </div>
+                </a>
             </div>
         </div>
     </div>
