--- a/index.html
+++ b/index.html
@@ -96,8 +96,8 @@
                         <img src="images/wallpaper/global_background.png" class="new_articles_img">
                     </div>
                     <div class="new_articles_content">
-                        <h2>Future title</h2>
-                        <span>Bla bla slbclznlz lzb ccsccjze , lzfnzl cl zlznclz l,c zlssdcpsp...</span>
+                        <h2><p>Lorem ipsum.</p></h2>
+                        <span><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid asperiores assumenda consequuntur earum exercitationem fuga fugiat illum iure, modi nihil obcaecati omnis praesentium quas ullam ut vero voluptatem. At, voluptatum.</p></span>
                     </div>
                 </div>
             </div>
@@ -106,8 +106,8 @@
                     <div>
                         <img src="images/wallpaper/global_background.png" class="new_articles_img">
                     </div>                    <div class="new_articles_content">
-                        <h2>Future title</h2>
-                        <span>Bla bla slkzno lz l,c zlssdcpsp...</span>
+                        <h2><p>Lorem ipsum.</p></h2>
+                        <span><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Commodi cum, esse excepturi fugiat illum iure molestias odio officiis omnis pariatur praesentium qui, quisquam quod reiciendis, rerum sit tempora temporibus veritatis.</p></span>
                     </div>
                 </div>
             </div>
@@ -116,8 +116,8 @@
                     <div>
                         <img src="images/wallpaper/global_background.png" class="new_articles_img">
                     </div>                    <div class="new_articles_content">
-                        <h2>Future titleq, clk cjl cjlz f</h2>
-                        <span>Bla bla slbclzlsdvksvls vk vkjz vkz hbzu ojzfozfkzfb zifbznclz l,c zlssdcpsp...</span>
+                        <h2><p>Lorem ipsum.</p></h2>
+                        <span><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus aliquid impedit libero necessitatibus, obcaecati quasi sequi! Assumenda eveniet, explicabo magnam nobis rerum sequi unde. Eligendi eos facere id perspiciatis quibusdam.</p></span>
                     </div>
                 </div>
             </div>
