--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
                     </div>
                     <div class="new_articles_content">
                         <h2>Lorem ipsum.</h2>
-                        <span>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid asperiores assumenda consequuntur earum exercitationem fuga fugiat illum iure, modi nihil obcaecati omnis praesentium quas ullam ut vero voluptatem. At, voluptatum.</p></span>
+                        <span>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid asperiores assumenda consequuntur earum exercitationem fuga fugiat illum iure, modi nihil obcaecati omnis praesentium quas ullam ut vero voluptatem. At, voluptatum.</span>
                     </div>
                 </a>
             </div>
@@ -105,6 +105,7 @@
                 <a>
                     <div>
                         <img src="images/wallpaper/global_background.png" class="new_articles_img" alt="Article image">
+                    </div>
                     <div class="new_articles_content">
                         <h2>Future title</h2>
                         <span>Bla bla slkzno lz l,c zlssdcpsp...</span>
