--- a/html/news.html
+++ b/html/news.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" type="text/css" href="../style/news.css"/>
     <link rel="stylesheet" type="text/css" href="../style/footer.css"/>
     <link rel="icon" type="text/css" href="../images/icons/Character_Paimon_Portrait.png">
-    <script src="../script/main.js"></script>
+<!--    <script src="../script/main.js"></script>-->
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
