--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
     <div class="section" id="section2">
     </div>
 
-    <div class="section fp-auto-height" id="section3">
+    <div class="section" id="section3">
         <footer>
             <div class="top">
 
