added strong tag on albedo's weapon content

--- a/html/albedo.html
+++ b/html/albedo.html
@@ -194,17 +194,17 @@
 
                 <div class="weaponsContent">
                     <div>
-                        <img src="../images/img-genshin/weapons/cinnabar_spindle.png" alt="Cinnabar spindle" class="weapon rare4">
-                        <div>
-                            <span class="weaponsName">Cinnabar Spindle</span>
-                            <span class="weaponsText">Elemental Skill DMG is increased by 40/50/60/70/80% of DEF. The effect will be triggered no more than once every 1.5s and will be cleared 0.1s after the Elemental Skill deals DMG.</span>
-                        </div>
-                    </div>
-                    <div>
                         <img src="../images/img-genshin/weapons/primordial_jade_cutter.png" alt="Primordial Jade cutter" class="weapon rare5">
                         <div>
                             <span class="weaponsName">Primordial Jade Cutter</span>
-                            <span class="weaponsText">HP increased by 20/25/30/35/40%. Additionally, provides an ATK bonus based on 1.2/1.5/1.8/2.1/2.4% of the weilder's Max HP.</span>
+                            <span class="weaponsText">HP increased by <strong>20/25/30/35/40%</strong>. Additionally, provides an ATK bonus based on <strong>1.2/1.5/1.8/2.1/2.4%</strong> of the weilder's Max HP.</span>
+                        </div>
+                    </div>
+                    <div>
+                        <img src="../images/img-genshin/weapons/cinnabar_spindle.png" alt="Cinnabar spindle" class="weapon rare4">
+                        <div>
+                            <span class="weaponsName">Cinnabar Spindle</span>
+                            <span class="weaponsText">Elemental Skill DMG is increased by <strong>40/50/60/70/80%</strong> of DEF. The effect will be triggered no more than once every 1.5s and will be cleared 0.1s after the Elemental Skill deals DMG.</span>
                         </div>
                     </div>
                 </div>
