--- a/index.html
+++ b/index.html
@@ -196,7 +196,8 @@
         <div class="list_new_characters">
             <img src="images/wallpaper/banner.png" alt="banner">
             <div>
-
+                <span>THE RISING STAR ITTO</span>
+                <img src="images/characters/big_itto.png" alt="big itto">
             </div>
         </div>
     <div class="section" id="section2">
