--- a/html/albedo.html
+++ b/html/albedo.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="antaww/xhmyjae">
     <meta name="description" content="Albedo's complete build">
-    <title>Albedo le sang</title>
+    <title>Albedo Build</title>
 
     <link rel="stylesheet" type="text/css" href="../style/characters.css"/>
     <link rel="stylesheet" type="text/css" href="../style/main.css">
