--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="antaww/xhmyjae">
     <meta name="description" content="The main page">
-    <title>Build me Paimon</title>
+    <title>BuildMePaimon</title>
 
     <link rel="stylesheet" href="style/main.css">
     <link rel="stylesheet" href="style/menu.css">
@@ -202,7 +202,7 @@
     <div class="section" id="section2">
     </div>
 
-    <div class="section" id="section3">
+    <div class="section fp-auto-height" id="section3">
         <footer>
             <div class="top">
 
